Simplify proto IO